--- a/layouts/partials/footer/main.html
+++ b/layouts/partials/footer/main.html
@@ -1,5 +1,12 @@
 <footer>
-  "Гарри и вагон косяков". 18+
+  <section class="row">
+    <div class="column">
+      "Гарри и вагон косяков". 18+.
+    </div>
+    <div class="column to-top">
+      <a href="#">В начало страницы</a>
+    </div>
+  </section>
   <br>
   <small>
     Контент носит исключительно развлекательный (юмористический) характер. Представленное мнение является субъективным.
