--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -21,5 +21,13 @@
         {{ partial "footer/main.html" . }}
       {{ end }}
     </div>
+
+    {{ range .Site.Params.custom_js -}}
+      <script
+  			  src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+  			  integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
+  			  crossorigin="anonymous" defer></script>
+      <script src="{{ . | absURL }}" defer></script>
+    {{- end }}
   </body>
 </html>
