--- a/layouts/partials/main/legend.html
+++ b/layouts/partials/main/legend.html
@@ -1,33 +1,39 @@
-<article class="legend-wrapper well-wrapper">
-  <h5>Легенда</h5>
+<div class="row">
+  <div class="column">
+    <article class="index-wrapper well-wrapper">
+    </article>
+  </div>
+  
+  <div class="column">
+    <article class="legend-wrapper well-wrapper">
+      <h5>Легенда</h5>
 
-  <ul class="legend">
-    <li>
-      <span class="legend-item good"></span>
-      Положительные моменты, "одобрямсы", "соглашамсы" и прочее.
-    </li>
-    <li>
-      <span class="legend-item comment"></span>
-      Нейтральные комментарии, шутейки, умные (и не очень) мысли, риторические вопросы, на которые, однако, хотелось бы получить ответ.
-    </li>
-    <li>
-      <span class="legend-item meh"></span>
-      Спорные или просто бесящие моменты.
-    </li>
-    <li>
-      <span class="legend-item bad"></span>
-      Конкретные косяки, нестыковки и прочие глупости, которые начисто портят всё впечатление.
-    </li>
-    <li>
-      <span class="legend-item text"></span>
-      Непосредственная цитата из книги. Курсивом написаны примечания, поясняющие, к чему цитата относится.
-    </li>
-    <li>
-      <span class="legend-item page-num"></span>
-      Просто номер страницы в книге, ничего криминального. Нумерация идёт по изданию "Росмэн". По номеру страницы можно кликнуть, чтобы получить постоянную ссылку в адресной строке браузера.
-    </li>
-  </ul>
-</article>
-
-<article class="index-wrapper well-wrapper">
-</article>
+      <ul class="legend">
+        <li>
+          <span class="legend-item good"></span>
+          Положительные моменты, "одобрямсы", "соглашамсы" и прочее.
+        </li>
+        <li>
+          <span class="legend-item comment"></span>
+          Нейтральные комментарии, шутейки, умные (и не очень) мысли, риторические вопросы, на которые, однако, хотелось бы получить ответ.
+        </li>
+        <li>
+          <span class="legend-item meh"></span>
+          Спорные или просто бесящие моменты.
+        </li>
+        <li>
+          <span class="legend-item bad"></span>
+          Конкретные косяки, нестыковки и прочие глупости, которые начисто портят всё впечатление.
+        </li>
+        <li>
+          <span class="legend-item text"></span>
+          Непосредственная цитата из книги. Курсивом написаны примечания, поясняющие, к чему цитата относится.
+        </li>
+        <li>
+          <span class="legend-item page-num"></span>
+          Просто номер страницы в книге, ничего криминального. Нумерация идёт по изданию "Росмэн". По номеру страницы можно кликнуть, чтобы получить постоянную ссылку в адресной строке браузера.
+        </li>
+      </ul>
+    </article>
+  </div>
+</div>
