--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -14,6 +14,9 @@
     {{- end }}
   </head>
   <body>
+    <header>
+      {{ partial "header/menu.html" . }}
+    </header>
     <div class="container">
       {{ block "main" . }}
       {{ end }}
