--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -30,6 +30,120 @@ a:active {
   color: #418da5;
 }
 
+/*--- Menu ---*/
+.main-menu {
+  box-sizing: border-box;
+  margin-bottom: 2em;
+}
+
+.main-menu ul, .main-menu li {
+  list-style: none;
+  margin: 0;
+}
+
+.main-menu ul li, .main-menu ul li a {
+  color: #000;
+  cursor: pointer;
+  transition: 200ms;
+  text-decoration: none;
+  white-space: nowrap;
+}
+
+.main-menu ul li.is-active > a {
+  font-weight: 700
+}
+
+.main-menu ul li:hover, .main-menu ul li a:hover {
+  opacity: 1;
+}
+
+.main-menu ul li a {
+  display: flex;
+  align-items: center;
+}
+
+.main-menu > ul > li.has-children::before {
+  content: '';
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid #000;
+  position: absolute;
+  right: 8px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.main-menu ul .link::before {
+  padding-right: 0;
+  display: none;
+}
+
+.main-menu > ul {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.main-menu > ul li {
+  position: relative;
+  margin: 0 8px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #000;
+}
+
+.main-menu > ul li {
+  padding-right: 36px;
+  padding-left: 36px;
+}
+
+.main-menu > ul li ul {
+  visibility: hidden;
+  opacity: 0;
+  padding: 0;
+  min-width: 160px;
+  background-color: #fff;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  transition: 200ms;
+  transition-delay: 200ms;
+  z-index: 1000;
+  margin-top: 21px;
+  width: 100%;
+}
+
+.main-menu > ul li ul li {
+  margin: 0;
+  padding: 8px 36px;
+}
+
+.main-menu > ul li ul li a {
+  display: block;
+}
+
+.main-menu > ul li ul li:hover, .main-menu > ul li ul a:hover {
+  background-color: #e9e9e9;
+}
+
+.main-menu > ul li:hover > ul {
+  opacity: 1;
+  visibility: visible;
+  transition-delay: 0ms;
+}
+/*--- Menu end ---*/
+
+.index li {
+  margin-top: 0.8em;
+}
+
+.index li:first-of-type {
+  margin-top: 0;
+}
+
 .pagination {
   margin: 1em 0;
   text-align: center;
@@ -41,10 +155,11 @@ a:active {
 
 .chapter-title {
   cursor: pointer;
+  margin-bottom: 0;
 }
 
 .mt-1 {
-  margin-top: 1em;
+  margin-top: 1.5em;
 }
 
 .book-main {
@@ -53,10 +168,6 @@ a:active {
 
 .book-main .row {
   margin-top: 3em;
-}
-
-.book-main .row:first-of-type {
-  margin-top: 0;
 }
 
 .book-main .column p {
@@ -94,7 +205,6 @@ a:active {
 .well-wrapper {
   font-size: 0.8em;
   padding: 1em;
-  border: 1px solid #e9e9e9;
   border-radius: 5px;
   margin-bottom: 2em;
 }
@@ -110,6 +220,14 @@ a:active {
 
 .well-wrapper li:last-of-type {
   margin-bottom: 0;
+}
+
+.legend li {
+  margin-top: 0.8em;
+}
+
+.legend li:first-of-type {
+  margin-top: 0;
 }
 
 .legend .legend-item {
