--- a/layouts/partials/header/menu.html
+++ b/layouts/partials/header/menu.html
@@ -2,8 +2,8 @@
 
 <nav class="main-menu">
   <ul class="parent-menu">
-    {{ range .Site.Menus.main }}
-      <li class="{{ if (eq $currentPage.URL .URL) }} is-active{{ end }} {{if .HasChildren}} has-children {{end}}">
+    {{ range .Site.Menus.main.ByWeight }}
+      <li class="{{ if (eq $currentPage.RelPermalink .URL) }} is-active{{ end }} {{if .HasChildren}} has-children {{end}}">
         <a href="{{ .URL }}">
           {{ .Pre }}
           {{ .Name }}
@@ -12,7 +12,7 @@
         {{ if .HasChildren }}
           <ul class="dropdown">
             {{ range .Children }}
-              <li class="{{ if (eq $currentPage.URL .URL) }} is-active{{ end }}">
+              <li class="{{ if (eq $currentPage.RelPermalink .URL) }} is-active{{ end }}">
                 <a href="{{ .URL }}">{{ .Name }}</a>
               </li>
             {{ end }}
