--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -7,9 +7,159 @@ body {
 }
 
 footer {
-  margin-top: 2rem;
-  border-top: 1px solid #ccc;
+  margin: 2rem 0;
+  border-top: 1px solid #e9e9e9;
   padding-top: 2rem;
+}
+
+footer .to-top {
+  text-align: right;
+  text-decoration: underline;
+  font-size: 0.9em;
+}
+
+a:link, a:visited {
+  color: #2a535e;
+}
+
+a:hover, a:focus {
+  color: #397081;
+}
+
+a:active {
+  color: #418da5;
+}
+
+/*--- Menu ---*/
+.main-menu {
+  box-sizing: border-box;
+  margin-bottom: 2em;
+}
+
+.main-menu ul, .main-menu li {
+  list-style: none;
+  margin: 0;
+}
+
+.main-menu ul li, .main-menu ul li a {
+  color: #000;
+  cursor: pointer;
+  transition: 200ms;
+  text-decoration: none;
+  white-space: nowrap;
+}
+
+.main-menu ul li.is-active > a {
+  font-weight: 700
+}
+
+.main-menu ul li:hover, .main-menu ul li a:hover {
+  opacity: 1;
+}
+
+.main-menu ul li a {
+  display: flex;
+  align-items: center;
+}
+
+.main-menu > ul > li.has-children::before {
+  content: '';
+  width: 0;
+  height: 0;
+  border-left: 5px solid transparent;
+  border-right: 5px solid transparent;
+  border-top: 5px solid #000;
+  position: absolute;
+  right: 8px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.main-menu ul .link::before {
+  padding-right: 0;
+  display: none;
+}
+
+.main-menu > ul {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.main-menu > ul li {
+  position: relative;
+  margin: 0 8px;
+  border-bottom: 1px solid #000;
+}
+
+.main-menu > ul li a {
+  padding: 20px 36px;
+}
+
+.main-menu > ul li ul {
+  visibility: hidden;
+  opacity: 0;
+  padding: 0;
+  min-width: 160px;
+  background-color: #fff;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  transition: 200ms;
+  transition-delay: 200ms;
+  z-index: 1000;
+  margin-top: 1px;
+  width: 100%;
+}
+
+.main-menu > ul li ul li {
+  margin: 0;
+}
+
+.main-menu > ul li ul li a {
+  padding: 8px 36px;
+}
+
+.main-menu > ul li ul li a {
+  display: block;
+}
+
+.main-menu > ul li ul li:hover, .main-menu > ul li ul a:hover {
+  background-color: #e9e9e9;
+}
+
+.main-menu > ul li:hover > ul {
+  opacity: 1;
+  visibility: visible;
+  transition-delay: 0ms;
+}
+/*--- Menu end ---*/
+
+.index li {
+  margin-top: 0.8em;
+}
+
+.index li:first-of-type {
+  margin-top: 0;
+}
+
+.pagination {
+  margin: 1em 0;
+  text-align: center;
+}
+
+.pagination a {
+  text-decoration: underline;
+}
+
+.chapter-title {
+  cursor: pointer;
+  margin-bottom: 0;
+}
+
+.mt-1 {
+  margin-top: 1.5em;
 }
 
 .book-main {
@@ -20,16 +170,13 @@ footer {
   margin-top: 3em;
 }
 
-.book-main .row:first-of-type {
-  margin-top: 0;
-}
-
 .book-main .column p {
   padding: 1em;
   margin: 0;
+  height: 100%;
 }
 
-.book-main .text {
+.book-main .text, .legend .text {
   background-color: #e9e9e9;
 }
 
@@ -40,6 +187,11 @@ footer {
   border-radius: 0.3em;
   font-size: 0.8em;
   margin-right: 0.5em;
+  cursor: pointer;
+}
+
+.book-main .text .page-num:hover, .book-main .text .page-num:focus {
+  background-color: #bee0e9;
 }
 
 .book-main .explanation {
@@ -50,19 +202,57 @@ footer {
   font-style: italic;
 }
 
-.book-main .comment {
+.well-wrapper {
+  font-size: 0.8em;
+  padding: 1em;
+  border-radius: 5px;
+  margin-bottom: 2em;
+}
+
+.well-wrapper ul {
+  margin: 0;
+}
+
+.well-wrapper li {
+  list-style-type: none;
+  font-size: 1em;
+}
+
+.well-wrapper li:last-of-type {
+  margin-bottom: 0;
+}
+
+.legend li {
+  margin-top: 0.8em;
+}
+
+.legend li:first-of-type {
+  margin-top: 0;
+}
+
+.legend .legend-item {
+  display: inline-block;
+  padding: 10px;
+  margin-right: 5px;
+}
+
+.legend .comment, .book-main .comment {
   background-color: #cce5ff;
 }
 
-.book-main .good {
+.legend .page-num {
+  background-color: #d1ecf1;
+}
+
+.legend .good, .book-main .good {
   background-color: #d4edda;
 }
 
-.book-main .bad {
+.legend .bad, .book-main .bad {
   background-color: #f8d7da;
 }
 
-.book-main .meh {
+.legend .meh, .book-main .meh {
   background-color: #fff3cd;
 }
 
@@ -70,5 +260,9 @@ footer {
   .row .column.column-60 {
     flex: 0 0 auto;
     max-width: 100%;
+  }
+
+  .book-main .column:nth-child(2) {
+    margin-top: 1em;
   }
 }
