--- a/layouts/partials/main/legend.html
+++ b/layouts/partials/main/legend.html
@@ -3,7 +3,7 @@
     <article class="index-wrapper well-wrapper">
     </article>
   </div>
-  
+
   <div class="column">
     <article class="legend-wrapper well-wrapper">
       <h5>Легенда</h5>
@@ -15,7 +15,7 @@
         </li>
         <li>
           <span class="legend-item comment"></span>
-          Нейтральные комментарии, шутейки, умные (и не очень) мысли, риторические вопросы, на которые, однако, хотелось бы получить ответ.
+          Нейтральные комментарии, шутейки, умные (и не очень) мысли, риторические вопросы, на которые, однако, хотелось бы получить ответ. Могут встречаться отсылки к другим произведениям, играм или фильмам, однако автор оставляет за собой право их дополнительно не объяснять.
         </li>
         <li>
           <span class="legend-item meh"></span>
