--- a/layouts/partials/footer/main.html
+++ b/layouts/partials/footer/main.html
@@ -9,7 +9,7 @@
   </section>
   <br>
   <small>
-    Контент носит исключительно развлекательный (юмористический) характер. Представленное мнение является субъективным.
+    Контент носит исключительно развлекательный (юмористический) характер. Представленное мнение является субъективным и не преследует цель кого-либо оскорбить или обидеть.
     Все права на оригинальный текст принадлежат изначальному правообладателю.
     Цитирование текста книг минимально и производится только в целях комментирования, критики и обсуждения.
   </small>
