--- a/layouts/partials/main/legend.html
+++ b/layouts/partials/main/legend.html
@@ -1,10 +1,15 @@
+<a href="#" class="show-legend js-show-dialog" data-target="#dialog-legend">Легенда</a>
+
 <div class="row">
   <div class="column">
     <article class="index-wrapper well-wrapper">
     </article>
   </div>
+</div>
 
-  <div class="column">
+<div class="dialog js-dialog" id="dialog-legend">
+  <a class="close-dialog js-close-dialog">&times;</a>
+  <div class="dialog-content">
     <article class="legend-wrapper well-wrapper">
       <h5>Легенда</h5>
 
