--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -87,6 +87,10 @@ a:active {
   justify-content: center;
 }
 
+.main-menu > ul.visible {
+  display: flex;
+}
+
 .main-menu > ul li {
   position: relative;
   margin: 0 8px;
@@ -135,14 +139,29 @@ a:active {
   visibility: visible;
   transition-delay: 0ms;
 }
+
+.main-menu .menu-toggler {
+  display: none;
+  margin-left: 2rem;
+  border: 1px #ccc solid;
+  border-radius: 5px;
+  padding: 0 5px;
+}
+
+.main-menu .menu-toggler:hover, .main-menu .menu-toggler:active {
+  background-color: #e9e9e9;
+}
+.main-menu .menu-toggler span {
+  display: block;
+  border-top: 1px solid #ccc;
+  margin: 7px 0;
+  width: 27px;
+  height: 1px;
+}
 /*--- Menu end ---*/
 
 .index li {
   margin-top: 0.8em;
-}
-
-.index li:first-of-type {
-  margin-top: 0;
 }
 
 .pagination {
@@ -291,16 +310,128 @@ a:active {
   margin-top: 0;
 }
 
-@media (max-width: 40.1rem) {
+.dialog {
+  display: none;
+  position: fixed;
+  z-index: 99999;
+  background-color: rgba(255, 255, 255, 0.5);
+  width: 100%;
+  height: 100%;
+  padding-top: 70px;
+  left: 0;
+  top: 0;
+  overflow: auto;
+}
+
+.dialog .dialog-content {
+  position: relative;
+  margin: auto;
+  padding: 0;
+  width: 90%;
+  max-width: 120rem;
+  background-color: #fff;
+}
+
+.dialog .close-dialog {
+  color: #000;
+  position: absolute;
+  top: 10px;
+  right: 25px;
+  font-size: 35px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.show-legend {
+  position: fixed;
+  bottom: 20px;
+  left: 20px;
+  z-index: 100;
+  background-color: rgba(255, 255, 255, 0.85);
+  border: 1px solid #ccc;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
+
+.index-wrapper .index {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.index-wrapper .index li {
+  flex-shrink: 0;
+  flex-basis: 50%;
+}
+
+@media (max-width: 119.9rem) {
   .row .column.column-60 {
     flex: 0 0 auto;
     max-width: 100%;
   }
+  .book-main .row {
+    flex-direction: column;
+  }
+}
 
-  .book-main .column:nth-child(2) {
-    margin-top: 1em;
+@media (max-width: 50rem) {
+  html {
+    font-size: 70%;
+  }
+  .main-menu {
+    margin: 1rem 0;
+  }
+  .main-menu .menu-toggler {
+    display: inline-block;
+  }
+  .main-menu > ul {
+    display: none;
+    padding: 0 2rem;
+    box-sizing: border-box;
+    margin-top: 2rem;
+  }
+  .main-menu > ul.visible {
+    display: block;
+  }
+  .main-menu > ul li ul {
+    visibility: visible;
+    opacity: 1;
+    position: static;
+    transform: none;
+    transition: none;
+    min-width: 100%;
+  }
+  .main-menu > ul li {
+    border-bottom: 0 none;
+    position: static;
+    display: block;
+    margin: 0;
+    text-align: center;
+  }
+  .main-menu > ul > li {
+    border-bottom: 1px solid #000;
+  }
+  .main-menu > ul > li a {
+    padding-bottom: 10px;
+    padding-top: 10px;
+  }
+  .main-menu > ul > li.has-children::before {
+    border: 0 none;
+  }
+  .main-menu ul li a {
+    display: block;
+  }
+  .main-menu > ul li:hover, .main-menu > ul li:focus,
+  .main-menu > ul li a:hover, .main-menu > ul li a:focus {
+    background-color: #e9e9e9;
   }
 
+  .index-wrapper .index {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 40.1rem) {
   .age-check .age-check-inner {
     flex-direction: row;
   }
