--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -379,7 +379,7 @@ a:active {
     font-size: 70%;
   }
   .main-menu {
-    margin: 1rem 0;
+    margin: 1rem 0 4rem 0;
   }
   .main-menu .menu-toggler {
     display: inline-block;
