--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,9 @@
 {{ define "title" }}
   {{ .Title }} &ndash; {{ .Site.Title }}
 {{ end }}
+
+{{ define "desc" }}{{ .Params.meta_desc }}{{end}}
+
 {{ define "main" }}
   <h1>{{ .Title }}</h1>
 
