--- a/layouts/partials/main/legend.html
+++ b/layouts/partials/main/legend.html
@@ -3,6 +3,8 @@
 <div class="row">
   <div class="column">
     <article class="index-wrapper well-wrapper">
+      <h3>Оглавление</h2>
+      <h4><small>{{ .Params.meta_desc }}</small></h4>
     </article>
   </div>
 </div>
