--- a/layouts/partials/main/legend.html
+++ b/layouts/partials/main/legend.html
@@ -3,7 +3,7 @@
 <div class="row">
   <div class="column">
     <article class="index-wrapper well-wrapper">
-      <h3>Оглавление</h2>
+      <h3>Оглавление</h3>
       <h4><small>{{ .Params.meta_desc }}</small></h4>
     </article>
   </div>
@@ -26,7 +26,7 @@
         </li>
         <li>
           <span class="legend-item meh"></span>
-          Спорные или просто бесящие моменты.
+          Спорные, странные или просто бесящие моменты.
         </li>
         <li>
           <span class="legend-item bad"></span>
