--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -4,6 +4,16 @@ html {
 
 body {
   color: #000;
+  font-family: 'Montserrat', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  letter-spacing: 0.02em;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  letter-spacing: 0.02em;
+  font-weight: 600;
+  Font-family: Didot, 'Didot LT STD', 'Hoefler Text', Garamond, 'Calisto MT', 'Times New Roman', serif;
 }
 
 footer {
@@ -179,7 +189,7 @@ a:active {
 }
 
 .mt-1 {
-  margin-top: 1.5em;
+  margin-top: 1.8em;
 }
 
 .book-main {
@@ -198,6 +208,10 @@ a:active {
 
 .book-main .text, .legend .text {
   background-color: #e9e9e9;
+}
+
+.book-main .text, .book-main .comment, .book-main .bad, .book-main .meh, .book-main .good {
+  font-feature-settings: 'ss01' on;
 }
 
 .book-main .text .page-num {
