--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,9 @@
-{{ define "title" }}
-  {{ .Title }} &ndash; {{ .Site.Title }}
-{{ end }}
+{{ define "title" }}{{ .Title }} &ndash; {{ .Site.Title }}{{ end }}
+{{ define "tw_title" }}{{ .Title }} &ndash; {{ .Site.Title }}{{ end }}
+{{ define "fb_title" }}{{ .Title }} &ndash; {{ .Site.Title }}{{ end }}
+{{ define "desc" }}{{ .Params.meta_desc }}{{ end }}
+{{ define "tw_desc" }}{{ .Params.meta_desc }}{{ end }}
+{{ define "fb_desc" }}{{ .Params.meta_desc }}{{ end }}
 
 {{ define "main" }}
   <h1>{{ .Title }}</h1>
@@ -11,5 +14,3 @@
 
   <p><small>{{ .Params.meta_desc }}</small></p>
 {{ end }}
-
-{{ define "desc" }}{{ .Params.meta_desc }}{{ end }}
