--- a/layouts/partials/footer/main.html
+++ b/layouts/partials/footer/main.html
@@ -1,16 +1,18 @@
 <footer>
   <section class="row">
     <div class="column">
-      "Гарри и вагон косяков". 18+.
+      "Гарри и вагон косяков". 18+. <a href="mailto:hi@harrypot.lol">hi@harrypot.lol</a>
     </div>
     <div class="column to-top">
       <a href="#">В начало страницы</a>
     </div>
   </section>
-  <br>
-  <small>
-    Контент носит исключительно развлекательный (юмористический) характер. Представленное мнение является субъективным и не преследует цели кого-либо оскорбить или обидеть.
-    Все права на оригинальный текст принадлежат изначальному правообладателю.
-    Цитирование текста книг минимально и производится только в целях комментирования, критики и обсуждения.
-  </small>
+
+  <section class="mt-05">
+    <small>
+      Контент носит исключительно развлекательный (юмористический) характер. Представленное мнение является субъективным и не преследует цели кого-либо оскорбить или обидеть.
+      Все права на оригинальный текст принадлежат изначальному правообладателю.
+      Цитирование текста книг минимально и производится только в целях комментирования, критики и обсуждения.
+    </small>
+  </section>
 </footer>
