--- a/layouts/partials/main/legend.html
+++ b/layouts/partials/main/legend.html
@@ -2,8 +2,8 @@
 
 <div class="row">
   <div class="column">
-    <article class="index-wrapper well-wrapper">
-      <h3>Оглавление</h3>
+    <article class="index-wrapper mb-2 mt-2">
+      <a href="#" class="button-dropdown button-outline js-show-toggle" data-target=".index-toggle-visibility">Оглавление</a>
     </article>
   </div>
 </div>
@@ -12,8 +12,6 @@
   <a class="close-dialog js-close-dialog">&times;</a>
   <div class="dialog-content">
     <article class="legend-wrapper well-wrapper">
-      <h5>Легенда</h5>
-
       <ul class="legend">
         <li>
           <span class="legend-item good"></span>
