--- a/layouts/partials/main/script.html
+++ b/layouts/partials/main/script.html
@@ -1,19 +1,13 @@
-<script
-    src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs="
-    crossorigin="anonymous" defer></script>
-  <script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js" defer></script>
-{{ $mainJs := resources.Get "js/custom.js" | js.Build "custom.js" | minify | fingerprint }}
-<script src="{{ $mainJs.Permalink }}" defer></script>
+{{ $mainJs := resources.Get "js/custom.js" | minify | fingerprint }}
+<script src="{{ $mainJs.Permalink }}" integrity="{{ $mainJs.Data.Integrity }}" defer></script>
 
-
-<script>
+<script defer>
   (function(){
     var t,i,e,n=window,o=document,a=arguments,s="script",r=["config","track","identify","visit","push","call","trackForm","trackClick"],c=function(){var t,i=this;for(i._e=[],t=0;r.length>t;t++)(function(t){i[t]=function(){return i._e.push([t].concat(Array.prototype.slice.call(arguments,0))),i}})(r[t])};for(n._w=n._w||{},t=0;a.length>t;t++)n._w[a[t]]=n[a[t]]=n[a[t]]||new c;i=o.createElement(s),i.async=1,i.src="//static.woopra.com/js/w.js",e=o.getElementsByTagName(s)[0],e.parentNode.insertBefore(i,e)
   })("woopra");
 
   woopra.config({
-      domain: 'harry-pot.web.app'
+    domain: 'harrypot.lol'
   });
   woopra.track();
 </script>
