--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -6,6 +6,7 @@
 {{ define "fb_desc" }}{{ .Params.meta_desc }}{{ end }}
 
 {{ define "main" }}
+<main>
   <h1>{{ .Title }}</h1>
 
   {{ partial "main/legend.html" . }}
@@ -13,4 +14,5 @@
   {{ .Content }}
 
   <p><small>{{ .Params.meta_desc }}</small></p>
+</main>
 {{ end }}
