--- a/layouts/partials/footer/main.html
+++ b/layouts/partials/footer/main.html
@@ -1,18 +1,18 @@
 <footer>
-  <section class="row">
+  <div class="row">
     <div class="column">
-      "Гарри и вагон косяков". 18+. <a href="mailto:hi@harrypot.lol">hi@harrypot.lol</a>
+      "Гарри и вагон косяков". 18+. Наш адрес: <a href="mailto:hi@harrypot.lol">hi@harrypot.lol</a>
     </div>
     <div class="column to-top">
       <a href="#">В начало страницы</a>
     </div>
-  </section>
+  </div>
 
-  <section class="mt-05">
+  <div class="mt-05">
     <small>
       Контент носит исключительно развлекательный (юмористический) характер. Представленное мнение является субъективным и не преследует цели кого-либо оскорбить или обидеть.
       Все права на оригинальный текст принадлежат изначальному правообладателю.
       Цитирование текста книг минимально и производится только в целях комментирования, критики и обсуждения.
     </small>
-  </section>
+  </div>
 </footer>
