--- a/layouts/partials/footer/main.html
+++ b/layouts/partials/footer/main.html
@@ -4,7 +4,7 @@
       "Гарри и вагон косяков". 18+. Наш адрес: <a href="mailto:hi@harrypot.lol">hi@harrypot.lol</a>
     </div>
     <div class="column to-top">
-      <a href="#">В начало страницы</a>
+      <a class="top-top-link" href="#">В начало</a>
     </div>
   </div>
 
