--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -53,7 +53,8 @@
   }
 
   .main-menu {
-    margin: 1rem 0 4rem 0;
+    margin: 1rem 0 1rem 0;
+    text-align: right;
   }
   .main-menu .menu-toggler {
     display: inline-block;
